--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer</title>
 </head>
+
 <body>
+    <!-- Cabeçalho da página -->
     <header>
-        
+        <!-- Tela de navegação -->
+        <nav>
+
+        </nav>
     </header>
-    
+
+    <!-- Principal da página -->
+    <main>
+
+    </main>
+
+    <!-- Sessão da página -->
+    <section>
+
+    </section>
+
+    <!-- Rodapé da página -->
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
