--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -19,7 +20,9 @@
 
     <!-- Principal da página -->
     <main>
-
+        <div class="container">
+            <img id="perfil" src="img/perfil01.png" alt="Imagem perfil" width="300" height="300">
+        </div>
     </main>
 
     <!-- Sessão da página -->
