Progresso - icones / barra nav

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="website icon" type="png" href="img/Variação 01 - transparente.png">
 </head>
 
 <body>
@@ -14,7 +15,19 @@
     <header>
         <!-- Tela de navegação -->
         <nav>
-
+            <ul id="icons">
+                <li><a href="#"><img src="img/linkedin.png" alt="Linkedin" height="30" style="margin-top: 0.2px"></a></li>
+                <li><a href="#"><img src="img/github.png" alt="GitHub" height="30" style="margin-top: 0.2px"></a></li>
+                <li><a href="#"><img src="img/facebook.png" alt="Facebook" height="30" style="margin-top: 0.2px"></a></li>
+                <li><a href="#"><img src="img/whatsapp.png" alt="Whatsapp" height="30" style="margin-top: 0.2px"></a></li>
+                <li><a href="#"><img src="img/instagram.png" alt="Instagram" height="30" style="margin-top: 0.2px"></a></li>
+            </ul>
+            <ul id="menu">
+                <li><a href="#">Contato</a></li>
+                <li><a href="#">Portifólio</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Principal</a></li>
+            </ul>
         </nav>
     </header>
 
