Melhoria no code

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <!-- Tela de navegação -->
         <nav>
             <ul id="icons">
-                <li><a href="#"><img src="img/linkedin.png" alt="Linkedin" height="30" style="margin-top: 0.2px"></a></li>
-                <li><a href="#"><img src="img/github.png" alt="GitHub" height="30" style="margin-top: 0.2px"></a></li>
-                <li><a href="#"><img src="img/facebook.png" alt="Facebook" height="30" style="margin-top: 0.2px"></a></li>
-                <li><a href="#"><img src="img/whatsapp.png" alt="Whatsapp" height="30" style="margin-top: 0.2px"></a></li>
-                <li><a href="#"><img src="img/instagram.png" alt="Instagram" height="30" style="margin-top: 0.2px"></a></li>
+                <li><a href="#"><img src="img/linkedin.png" alt="Linkedin" height="30"></a></li>
+                <li><a href="#"><img src="img/github.png" alt="GitHub" height="30"></a></li>
+                <li><a href="#"><img src="img/facebook.png" alt="Facebook" height="30"></a></li>
+                <li><a href="#"><img src="img/whatsapp.png" alt="Whatsapp" height="30"></a></li>
+                <li><a href="#"><img src="img/instagram.png" alt="Instagram" height="30"></a></li>
             </ul>
             <ul id="menu">
                 <li><a href="#">Contato</a></li>
